--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "@syncfusion/ej2-vue-schedule": "^23.1.44",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.29.0",
+    "mitt": "^3.0.1",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
-    "vuetify": "^3.0.0",
-    "vuex": "^4.1.0",
-    "bootstrap": "^5.3.2",
-    "mitt": "^3.0.1"
+    "vuetify": "^3.4.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
