--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
-    "@syncfusion/ej2-vue-schedule": "^23.1.44",
     "bootstrap": "^5.3.2",
     "core-js": "^3.29.0",
+    "devextreme": "23.1.6",
+    "devextreme-vue": "23.1.6",
     "mitt": "^3.0.1",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
